--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -76,14 +76,26 @@ section h3 {
 
 .activity-card ul {
   margin-top: 10px;
-  padding-left: 20px;
-  list-style-type: disc;
+  padding-left: 0;
+  list-style-type: none;
 }
 
 .activity-card li {
   margin-bottom: 5px;
   font-size: 14px;
   color: #555;
+}
+
+.activity-card .delete {
+  cursor: pointer;
+  color: #c62828;
+  margin-left: 10px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.activity-card .delete:hover {
+  color: #b71c1c;
 }
 
 .form-group {
